update janken app

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang=""en">
+<html lang="en">
 <head>
-    <meta charset="UTF8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>じゃんけんアプリ</title>
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <h1 id="title">じゃんけん</h1>
+    <h1 id="title">じゃんけんアプリ</h1>
 
     <div id="main">
-        <p>✊🏻✌🏻🖐🏻 </p>
+        <p>✊🏻✌🏻🖐🏻 から選んでね</p>
 
         <button onclick="janken(1);" class="symbol">✊🏻</button>
         <button onclick="janken(2);" class="symbol">✌🏻</button>
@@ -34,5 +34,6 @@
         <p>結果↓</p>
         <p id="ResultMessage"></p>
     </div>
+
 </body>
 </html>
